fixed overflow bug in Paste compoenent on Public Pastes
- fixed long text which was previously overflow on Public pastes

--- a/styles/paste.module.css
+++ b/styles/paste.module.css
@@ -5,6 +5,7 @@
 }
 
 .grid_item {
+  overflow: hidden;
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 5px;
